Basic content added.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,42 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
   <link rel="stylesheet" type="text/css" href="style.css">
-
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <title></title>
 </head>
 
 <body>
+	<main>
+		<header class="section__heading">
+			<h1 class="heading__title">Helen Zhou</h1>
+		</header>
+
+		<div class="section__photo">
+			<img class="photo" src="/img/about.jpg" />
+		</div>
+
+		<div class="section__text">
+			<p>
+				Hi! I’m Helen Zhou and I’m a <a href="https://medium.com/@katherinemartinez/the-unicorn-hybrid-designer-developer-5e89607d5fe0" target="_blank">unicorn</a> wannabe. Check me out on <a href="https://github.com/helenzhou6/One-Pager" target="_blank">github</a>, <a href="https://www.freecodecamp.org/helenzhou6" target="_blank">free code camp</a> and <a href="https://www.codewars.com/users/helenzhou6" target="_blank">code wars</a>.
+			</p>
+			<p>
+				Plus I’m one of a kind 🙃
+				<ol class="text__list">
+					<li>
+						A woman
+					</li>
+					<li>
+						An Asian
+					</li>
+					<li>
+						Into women
+					</li>
+				</ol>
+			</p>
+		</div>
+	</main>
 
 </body>
 </html>
