Basic styling (margins and line height added).

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-	<main>
+	<main class="main-wrapper">
 		<header class="section__heading">
-			<h1 class="heading__title">Helen Zhou</h1>
+			<h1 class="heading__title"><span class="title__first">Helen</span> <span class="title__second">Zhou</span></h1>
 		</header>
 
 		<div class="section__photo">
@@ -22,11 +22,12 @@
 		</div>
 
 		<div class="section__text">
-			<p>
+			<p class="text__main">
 				Hi! I’m Helen Zhou and I’m a <a href="https://medium.com/@katherinemartinez/the-unicorn-hybrid-designer-developer-5e89607d5fe0" target="_blank">unicorn</a> wannabe. Check me out on <a href="https://github.com/helenzhou6/One-Pager" target="_blank">github</a>, <a href="https://www.freecodecamp.org/helenzhou6" target="_blank">free code camp</a> and <a href="https://www.codewars.com/users/helenzhou6" target="_blank">code wars</a>.
 			</p>
-			<p>
+			<p class="text__list-heading">
 				Plus I’m one of a kind 🙃
+			</p>
 				<ol class="text__list">
 					<li>
 						A woman
@@ -38,8 +39,11 @@
 						Into women
 					</li>
 				</ol>
-			</p>
 		</div>
+
+		<footer class="section__footer">
+			Made with TLC by Helen Zhou
+		</footer>
 	</main>
 
 </body>
