--- a/index.html
+++ b/index.html
@@ -14,16 +14,20 @@
 <body>
 	<main class="main-wrapper">
 		<header class="section__heading">
-			<h1 class="heading__title"><span class="title__first">Helen</span> <span class="title__second">Zhou</span></h1>
+			<div class="border"></div>
+			<h1 class="heading__title"><span class="title">Helen <span class="title__second">Zhou</span></span></h1>
 		</header>
 
 		<div class="section__photo">
-			<img class="photo" src="/img/about.jpg" />
+			<div class="photo">
+				<img class="photo-img" src="/img/about.jpg" />
+			</div>
 		</div>
 
 		<div class="section__text">
 			<p class="text__main">
-				Hi! I’m Helen Zhou and I’m a <a href="https://medium.com/@katherinemartinez/the-unicorn-hybrid-designer-developer-5e89607d5fe0" target="_blank">unicorn</a> wannabe. Check me out on <a href="https://github.com/helenzhou6/One-Pager" target="_blank">github</a>, <a href="https://www.freecodecamp.org/helenzhou6" target="_blank">free code camp</a> and <a href="https://www.codewars.com/users/helenzhou6" target="_blank">code wars</a>.
+				Hi! I’m Helen Zhou and I’m a <a href="https://medium.com/@katherinemartinez/the-unicorn-hybrid-designer-developer-5e89607d5fe0" target="_blank">unicorn</a> wannabe. Check me out on <a href="https://github.com/helenzhou6/One-Pager" target="_blank">github <img class="text__icon" src="/img/github.png" /></a>, <a href="https://www.freecodecamp.org/helenzhou6" target="_blank">free code camp <img class="text__icon" src="/img/freecodecamp.png" /></a>
+				 and <a href="https://www.codewars.com/users/helenzhou6" target="_blank">code wars <img class="text__icon" src="/img/codewars.png" /></a>.
 			</p>
 			<p class="text__list-heading">
 				Plus I’m one of a kind 🙃
@@ -42,7 +46,8 @@
 		</div>
 
 		<footer class="section__footer">
-			Made with TLC by Helen Zhou
+			<div class="border"></div>
+			<span class="footer__text">Made with TLC <img class="footer__icon" src="/img/sootball.png" /> 11.2017</span>
 		</footer>
 	</main>
 
