Added flexbox to fix positioning.

--- a/index.html
+++ b/index.html
@@ -12,44 +12,47 @@
 </head>
 
 <body>
-	<main class="main-wrapper">
-		<header class="section__heading">
-			<div class="border"></div>
-			<h1 class="heading__title"><span class="title">Helen <span class="title__second">Zhou</span></span></h1>
-		</header>
+	<div class="margin-wrapper">
+		<div class="top-border border"></div>
 
-		<div class="section__photo">
-			<div class="photo">
-				<img class="photo-img" src="/img/about.jpg" />
+		<main class="main-section">
+			<header class="section__heading">
+				<h1 class="heading__title"><span class="title">Helen <span class="title__second">Zhou</span></span></h1>
+			</header>
+
+			<div class="section__photo">
+				<div class="photo">
+					<img class="photo-img" src="/img/about.jpg" />
+				</div>
 			</div>
-		</div>
 
-		<div class="section__text">
-			<p class="text__main">
-				Hi! I’m Helen Zhou and I’m a <a href="https://medium.com/@katherinemartinez/the-unicorn-hybrid-designer-developer-5e89607d5fe0" target="_blank">unicorn</a> wannabe. Check me out on <a href="https://github.com/helenzhou6/One-Pager" target="_blank">github <img class="text__icon" src="/img/github.png" /></a>, <a href="https://www.freecodecamp.org/helenzhou6" target="_blank">free code camp <img class="text__icon" src="/img/freecodecamp.png" /></a>
-				 and <a href="https://www.codewars.com/users/helenzhou6" target="_blank">code wars <img class="text__icon" src="/img/codewars.png" /></a>.
-			</p>
-			<p class="text__list-heading">
-				Plus I’m one of a kind 🙃
-			</p>
-				<ol class="text__list">
-					<li>
-						A woman
-					</li>
-					<li>
-						An Asian
-					</li>
-					<li>
-						Into women
-					</li>
-				</ol>
-		</div>
+			<div class="section__text">
+				<p class="text__main">
+					Hi! I’m Helen Zhou and I’m a <a href="https://medium.com/@katherinemartinez/the-unicorn-hybrid-designer-developer-5e89607d5fe0" target="_blank">unicorn</a> wannabe. Check me out on <a href="https://github.com/helenzhou6/One-Pager" target="_blank">github <img class="text__icon" src="/img/github.png" /></a>, <a href="https://www.freecodecamp.org/helenzhou6" target="_blank">free code camp <img class="text__icon" src="/img/freecodecamp.png" /></a>
+					 and <a href="https://www.codewars.com/users/helenzhou6" target="_blank">code wars <img class="text__icon" src="/img/codewars.png" /></a>.
+				</p>
+				<p class="text__list-heading">
+					Plus I’m one of a kind 🙃
+				</p>
+					<ol class="text__list">
+						<li>
+							A woman
+						</li>
+						<li>
+							An Asian
+						</li>
+						<li>
+							Into women
+						</li>
+					</ol>
+			</div>
+		</main>
 
 		<footer class="section__footer">
 			<div class="border"></div>
 			<span class="footer__text">Made with TLC <img class="footer__icon" src="/img/sootball.png" /> 11.2017</span>
 		</footer>
-	</main>
+	</div>
 
 </body>
 </html>
