--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		</main>
 
 		<footer class="section__footer">
-			<div class="border"></div>
+			<div class="bottom-border border"></div>
 			<span class="footer__text">Made with TLC <img class="footer__icon" src="/img/sootball.png" /> 11.2017</span>
 		</footer>
 	</div>
