Added media queries.

--- a/index.html
+++ b/index.html
@@ -22,19 +22,30 @@
 
 			<div class="section__photo">
 				<div class="photo">
-					<img class="photo-img" src="/img/about.jpg" />
+					<img class="photo-img" src="/img/about.png" />
+				</div>
+				<div class="mobile-is-hidden photo__caption">
+					<figcaption class="photo__text">
+						   A woman
+					</figcaption>
 				</div>
 			</div>
 
 			<div class="section__text">
 				<p class="text__main">
-					Hi! I’m Helen Zhou and I’m a <a href="https://medium.com/@katherinemartinez/the-unicorn-hybrid-designer-developer-5e89607d5fe0" target="_blank">unicorn</a> wannabe. Check me out on <a href="https://github.com/helenzhou6/One-Pager" target="_blank">github <img class="text__icon" src="/img/github.png" /></a>, <a href="https://www.freecodecamp.org/helenzhou6" target="_blank">free code camp <img class="text__icon" src="/img/freecodecamp.png" /></a>
-					 and <a href="https://www.codewars.com/users/helenzhou6" target="_blank">code wars <img class="text__icon" src="/img/codewars.png" /></a>.
+					Hi! I’m Helen Zhou and I’m a <a href="https://medium.com/@katherinemartinez/the-unicorn-hybrid-designer-developer-5e89607d5fe0" target="_blank">unicorn</a> wannabe. Check me out on <a href="https://github.com/helenzhou6/One-Pager" target="_blank">github <span class="text__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -0.5 16 16" shape-rendering="crispEdges">
+<path stroke="#2E2E2E" d="M5 1h5M3 2h9M2 3h1M4 3h7M12 3h1M1 4h2M5 4h5M12 4h2M1 5h2M12 5h2M0 6h2M13 6h2M0 7h2M13 7h2M0 8h2M13 8h2M0 9h3M12 9h3M0 10h4M11 10h4M0 11h2M3 11h4M8 11h7M1 12h2M4 12h2M9 12h5M1 13h2M10 13h4M2 14h3M10 14h3M3 15h2M10 15h2" />
+</svg></span></a>, <a href="https://www.freecodecamp.org/helenzhou6" target="_blank">free code camp <span class="text__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -0.5 16 16" shape-rendering="crispEdges">
+<path stroke="#2E2E2E" d="M3 2h2M10 2h2M2 3h2M6 3h1M11 3h2M1 4h2M6 4h2M12 4h2M0 5h2M6 5h2M9 5h1M13 5h2M0 6h2M5 6h5M13 6h2M0 7h2M4 7h3M8 7h2M13 7h2M0 8h2M4 8h3M8 8h3M13 8h2M0 9h2M4 9h2M8 9h1M10 9h1M13 9h2M0 10h2M4 10h2M10 10h1M13 10h2M0 11h2M4 11h2M9 11h2M13 11h2M0 12h2M5 12h2M8 12h2M13 12h2M0 13h2M13 13h2M1 14h2M5 14h5M12 14h2M2 15h2M11 15h2" />
+</svg></span></a>
+					 and <a href="https://www.codewars.com/users/helenzhou6" target="_blank">code wars <span class="text__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -0.5 16 16" shape-rendering="crispEdges">
+<path stroke="#2E2E2E" d="M0 0h7M10 0h6M0 1h5M7 1h3M11 1h5M0 2h3M6 2h3M13 2h3M0 3h2M3 3h1M6 3h2M10 3h3M14 3h2M0 4h2M3 4h2M6 4h2M9 4h3M14 4h2M0 5h1M3 5h3M7 5h1M9 5h2M15 5h1M1 6h1M4 6h6M11 6h3M15 6h1M1 7h2M6 7h9M1 8h9M13 8h2M0 9h1M2 9h3M6 9h6M14 9h1M0 10h1M5 10h2M8 10h1M10 10h3M15 10h1M0 11h2M4 11h3M8 11h2M11 11h2M14 11h2M0 12h2M3 12h3M8 12h2M12 12h1M14 12h2M0 13h3M7 13h3M13 13h3M0 14h5M6 14h3M11 14h5M0 15h6M9 15h7" />
+</svg></span></a>.
 				</p>
 				<p class="text__list-heading">
-					Plus I’m one of a kind 🙃
+					Plus I’m one of a kind 🙃.
 				</p>
-					<ol class="text__list">
+					<ol class="text__list mobile-not-hidden">
 						<li>
 							A woman
 						</li>
@@ -50,7 +61,9 @@
 
 		<footer class="section__footer">
 			<div class="bottom-border border"></div>
-			<span class="footer__text">Made with TLC <img class="footer__icon" src="/img/sootball.png" /> 11.2017</span>
+			<span class="footer__text">Made with TLC <span class="footer__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -0.5 16 16" shape-rendering="crispEdges">
+<path stroke="#9B9B9B" d="M3 1h1M5 1h1M7 1h1M9 1h1M11 1h1M4 2h8M13 2h1M1 3h1M3 3h10M2 4h12M15 4h1M0 5h15M1 6h3M6 6h4M12 6h4M0 7h3M7 7h2M13 7h2M1 8h2M5 8h1M7 8h2M10 8h1M13 8h3M0 9h4M6 9h4M12 9h3M1 10h15M0 11h1M2 11h12M3 12h10M14 12h1M2 13h1M4 13h8M4 14h1M6 14h1M8 14h1M10 14h1M12 14h1" />
+</svg></span> 11.2017</span>
 		</footer>
 	</div>
 
