Minor adjustments to margins.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<main class="main-section">
 			<header class="section__heading">
-				<h1 class="heading__title"><span class="title">Helen <span class="title__second">Zhou</span></span></h1>
+				<h1 class="heading__title"><span class="title">Helen<span class="title__second"> Zhou</span></span></h1>
 			</header>
 
 			<div class="section__photo">
@@ -46,13 +46,13 @@
 					Plus I’m one of a kind 🙃.
 				</p>
 					<ol class="text__list mobile-not-hidden">
-						<li>
+						<li class="list__item">
 							A woman
 						</li>
-						<li>
+						<li class="list__item">
 							An Asian
 						</li>
-						<li>
+						<li class="list__item">
 							Into women
 						</li>
 					</ol>
