Added in a carousel (using vanilla javascript).

--- a/index.html
+++ b/index.html
@@ -21,13 +21,24 @@
 			</header>
 
 			<div class="section__photo">
-				<div class="photo">
-					<img class="photo-img" src="/img/about.png" />
+				<div class="photos">
+					<div class="photo first--js">
+						<img class="photo-img" src="/img/about.png" />
+					</div>
+					<div class="photo second--js">
+						<img class="photo-img" src="/img/asian.png" />
+					</div>
+					<div class="photo third--js">
+						<img class="photo-img" src="/img/women.png" />
+					</div>
 				</div>
+
 				<div class="mobile-is-hidden photo__caption">
-					<figcaption class="photo__text">
-						   A woman
-					</figcaption>
+					<span class="arrow--js left-arrow">← </span>
+					<span class="caption">
+						<figcaption class="photo__text one--js">A woman</figcaption><figcaption class="photo__text two--js">An Asian</figcaption><figcaption class="photo__text three--js">Into women</figcaption>
+					</span>
+					<span class="arrow--js right-arrow"> →</span>
 				</div>
 			</div>
 
@@ -66,6 +77,6 @@
 </svg></span> 11.2017</span>
 		</footer>
 	</div>
-
+	<script src="myscripts.js"></script>
 </body>
 </html>
