Added photos and adjusted to accommodate new aspect ratio.

--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
 			<div class="section__photo">
 				<div class="photos">
 					<div class="photo first--js">
-						<img class="photo-img" src="/img/about.png" />
+						<img class="photo-img" src="/img/asian.jpg" />
 					</div>
 					<div class="photo second--js">
-						<img class="photo-img" src="/img/asian.png" />
+						<img class="photo-img" src="/img/woman.jpg" />
 					</div>
 					<div class="photo third--js">
-						<img class="photo-img" src="/img/women.png" />
+						<img class="photo-img" src="/img/women.jpg" />
 					</div>
 				</div>
 
 				<div class="mobile-is-hidden photo__caption">
 					<span class="arrow--js left-arrow">← </span>
 					<span class="caption">
-						<figcaption class="photo__text one--js">A woman</figcaption><figcaption class="photo__text two--js">An Asian</figcaption><figcaption class="photo__text three--js">Into women</figcaption>
+						<figcaption class="photo__text one--js">An Asian</figcaption><figcaption class="photo__text two--js">A Woman</figcaption><figcaption class="photo__text three--js">Into women</figcaption>
 					</span>
 					<span class="arrow--js right-arrow"> →</span>
 				</div>
