Desktop view improvements.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<div class="margin-wrapper">
 		<div class="top-border border"></div>
 
-		<main class="main-section">
+		<main class="main-section clearfix">
 			<header class="section__heading">
-				<h1 class="heading__title"><span class="title">Helen<span class="title__second"> Zhou</span></span></h1>
+				<h1 class="heading__title"><span class="title">Helen <span class="title__second">Zhou</span></span></h1>
 			</header>
 
 			<div class="section__photo">
