Fixed issue with photos not loading.

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 			<div class="section__photo">
 				<div class="photos">
 					<div class="photo first--js">
-						<img class="photo-img" src="/img/asian.jpg" />
+						<img class="photo-img" src="https://helenzhou6.github.io/One-Pager/img/asian.jpg" />
 					</div>
 					<div class="photo second--js">
-						<img class="photo-img" src="/img/woman.jpg" />
+						<img class="photo-img" src="https://helenzhou6.github.io/One-Pager/img/woman.jpg" />
 					</div>
 					<div class="photo third--js">
-						<img class="photo-img" src="/img/women.jpg" />
+						<img class="photo-img" src="https://helenzhou6.github.io/One-Pager/img/women.jpg" />
 					</div>
 				</div>
 
