Photo credits added.

--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
 				<div class="photos">
 					<div class="photo first--js">
 						<img class="photo-img" src="https://helenzhou6.github.io/One-Pager/img/asian.jpg" />
+						<span class="photo__credits">Photo credit to Reag Bermejo</span>
 					</div>
 					<div class="photo second--js">
 						<img class="photo-img" src="https://helenzhou6.github.io/One-Pager/img/woman.jpg" />
+						<span class="photo__credits">Photo credit to Reag Bermejo</span>
 					</div>
 					<div class="photo third--js">
 						<img class="photo-img" src="https://helenzhou6.github.io/One-Pager/img/women.jpg" />
+						<span class="photo__credits">Photo credit to Reag Bermejo</span>
 					</div>
 				</div>
 
