Changed photo credits to different position.

--- a/index.html
+++ b/index.html
@@ -24,15 +24,12 @@
 				<div class="photos">
 					<div class="photo first--js">
 						<img class="photo-img" src="https://helenzhou6.github.io/One-Pager/img/asian.jpg" />
-						<span class="photo__credits">Photo credit to Reag Bermejo</span>
 					</div>
 					<div class="photo second--js">
 						<img class="photo-img" src="https://helenzhou6.github.io/One-Pager/img/woman.jpg" />
-						<span class="photo__credits">Photo credit to Reag Bermejo</span>
 					</div>
 					<div class="photo third--js">
 						<img class="photo-img" src="https://helenzhou6.github.io/One-Pager/img/women.jpg" />
-						<span class="photo__credits">Photo credit to Reag Bermejo</span>
 					</div>
 				</div>
 
@@ -75,7 +72,7 @@
 
 		<footer class="section__footer">
 			<div class="bottom-border border"></div>
-			<span class="footer__text">Made with TLC <span class="footer__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -0.5 16 16" shape-rendering="crispEdges">
+			<span class="footer__text">Photos by <a class="credit-link" href="https://www.flickr.com/photos/129497536@N08/" target="_blank">Reag Bermejo</a>. Made with TLC <span class="footer__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -0.5 16 16" shape-rendering="crispEdges">
 <path stroke="#9B9B9B" d="M3 1h1M5 1h1M7 1h1M9 1h1M11 1h1M4 2h8M13 2h1M1 3h1M3 3h10M2 4h12M15 4h1M0 5h15M1 6h3M6 6h4M12 6h4M0 7h3M7 7h2M13 7h2M1 8h2M5 8h1M7 8h2M10 8h1M13 8h3M0 9h4M6 9h4M12 9h3M1 10h15M0 11h1M2 11h12M3 12h10M14 12h1M2 13h1M4 13h8M4 14h1M6 14h1M8 14h1M10 14h1M12 14h1" />
 </svg></span> 11.2017</span>
 		</footer>
